tests/fixtures/errors/syntax_if.z
# E001x: malformed `if` with no condition.
main: function is {
    if then {
        print "x"
    }
}
